--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-btrc==2.3
-cbagent==0.5
+btrc
+cbagent
 couchbase<1.0.1
 fabric==1.6.0
-logger==1.1
+logger
 lxml==3.2.1
 requests==1.2.0
-spring>2.0.0
+spring
