--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 btrc
 decorator
-git+https://github.com/couchbaselabs/spring.git
-git+https://github.com/couchbaselabs/cbagent.git
+git+https://github.com/couchbaselabs/spring.git@ronnie
+git+https://github.com/couchbaselabs/cbagent.git@ronnie
 celery==3.0.21
 couchbase==1.2.0
 fabric==1.8.0
