--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ celery==3.0.21
 couchbase==1.2.0
 decorator
 fabric==1.8.0
+flake8==2.1.0
 logger
 mc_bin_client
+mock
+nose==1.3.1
 numpy
 requests==2.1.0
 seriesly
