reference github projects instead of pypi packages
Change-Id: I5034923441af41ec9b28f1e55f1fb30353620683
Reviewed-on: http://review.couchbase.org/36684
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-btrc
-cbagent
+git+https://github.com/pavel-paulau/btrc.git
+git+https://github.com/couchbaselabs/cbagent.git
 celery==3.0.21
 couchbase==1.2.0
 decorator
 fabric==1.8.0
 flake8==2.1.0
 logger
-mc_bin_client
+git+https://github.com/pavel-paulau/mc_bin_client.git
 mock
 nose==1.3.1
 numpy
 requests==2.1.0
 seriesly
-spring
-tap
-upr
+git+https://github.com/couchbaselabs/spring.git
+git+https://github.com/pavel-paulau/tap.git
+git+https://github.com/pavel-paulau/upr.git
