--- a/templates/gateload_config_template.json
+++ b/templates/gateload_config_template.json
@@ -21,7 +21,7 @@
       }
     ],
     "RampUpIntervalMs": 900000,
-    "RunTimeMs": 1800000,
+    "RunTimeMs": null,
     "SleepTimeMs": 10000,
     "NumPullers": null,
     "NumPushers": null,
