--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-git+https://github.com/pavel-paulau/btrc.git
-git+https://github.com/couchbaselabs/cbagent.git
+git+https://github.com/pavel-paulau/btrc.git#get=btrc
+git+https://github.com/couchbaselabs/cbagent.git#egg=cbagent
 celery==3.0.21
 couchbase==1.2.0
 decorator
 fabric==1.8.0
 flake8==2.1.0
 logger
-git+https://github.com/pavel-paulau/mc_bin_client.git
+git+https://github.com/pavel-paulau/mc_bin_client.git#egg=mc_bin_client
 mock
 nose==1.3.1
 numpy
 requests==2.1.0
 seriesly
-git+https://github.com/couchbaselabs/spring.git
-git+https://github.com/pavel-paulau/tap.git
-git+https://github.com/pavel-paulau/upr.git
+git+https://github.com/couchbaselabs/spring.git#egg=spring
+git+https://github.com/pavel-paulau/tap.git#egg=tap
+git+https://github.com/pavel-paulau/upr.git#egg=upr
