use jinja to render sgw_test_config template
Change-Id: I7b918f63889fe5a72f8fe34fed5a417e448508b6
Reviewed-on: http://review.couchbase.org/37475
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Li Yang <lichenyang2@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ couchbase==1.2.0
 decorator
 fabric==1.8.0
 flake8==2.1.0
+jinja2==2.7.2
 logger
 git+https://github.com/pavel-paulau/mc_bin_client.git#egg=mc_bin_client
 mock
