use jinja to generate sync gatewat config
Change-Id: I544a8dd51ace0d08142a4f33e62a6a910f17e47c
Reviewed-on: http://review.couchbase.org/37478
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Li Yang <lichenyang2@gmail.com>

--- a/templates/gateway_config_template.json
+++ b/templates/gateway_config_template.json
@@ -1,15 +1,15 @@
 {
         "log": ["HTTP"],
         "adminInterface": ":4985",
-        "maxIncomingConnections": null,
-        "maxCouchbaseConnections": null,
+        "maxIncomingConnections": "{{conn_in}}",
+        "maxCouchbaseConnections": "{{conn_db}}",
         "MaxFileDescriptors": 90000,  
         "SlowServerCallWarningThreshold": 500,
-        "CompressResponses": null,
+        "CompressResponses": {{compression}},
         "databases": {
                 "db": {
-                        "server": null,
-                        "bucket": "bucket-1",
+                        "server": "http://{{bucket}}:password@{{db_master}}/",
+                        "bucket": "{{bucket}}",
                         "users": {
                                 "GUEST": { "disabled": true }
                         }
