use jinja to generate gateload config
Change-Id: I1dfa7c9b57588155c888a3febdaff1bd3072dd9b
Reviewed-on: http://review.couchbase.org/37480
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Li Yang <lichenyang2@gmail.com>

--- a/templates/gateload_config_template.json
+++ b/templates/gateload_config_template.json
@@ -1,5 +1,5 @@
 {
-    "Hostname": null,
+    "Hostname": "{{gateway}}",
     "Port": 4984,
     "AdminPort": 4985,
     "Database": "db",
@@ -21,15 +21,15 @@
       }
     ],
     "RampUpIntervalMs": 900000,
-    "RunTimeMs": null,
+    "RunTimeMs": {{run_time}},
     "SleepTimeMs": 10000,
-    "NumPullers": null,
-    "NumPushers": null,
+    "NumPullers": {{pullers}},
+    "NumPushers": {{pushers}},
     "ChannelActiveUsers": 40,
     "ChannelConcurrentUsers": 40,
     "MinUserOffTimeMs": 0,
     "MaxUserOffTimeMs": 0,
     "Verbose": false,
     "LogRequests": false,
-    "UserOffset": null
+    "UserOffset": {{idx * (pullers + pushers)}}
 }
