more consistent tabulation
Change-Id: I12dd0ac6e1de6014fff081f64de523fd8dd02c8d
Reviewed-on: http://review.couchbase.org/37483
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/templates/gateway_config_template.json
+++ b/templates/gateway_config_template.json
@@ -1,18 +1,18 @@
 {
-        "log": ["HTTP"],
-        "adminInterface": ":4985",
-        "maxIncomingConnections": "{{conn_in}}",
-        "maxCouchbaseConnections": "{{conn_db}}",
-        "MaxFileDescriptors": 90000,  
-        "SlowServerCallWarningThreshold": 500,
-        "CompressResponses": {{compression}},
-        "databases": {
-                "db": {
-                        "server": "http://{{bucket}}:password@{{db_master}}/",
-                        "bucket": "{{bucket}}",
-                        "users": {
-                                "GUEST": { "disabled": true }
-                        }
-                }
+    "log": ["HTTP"],
+    "adminInterface": ":4985",
+    "maxIncomingConnections": "{{conn_in}}",
+    "maxCouchbaseConnections": "{{conn_db}}",
+    "maxFileDescriptors": 90000,
+    "slowServerCallWarningThreshold": 500,
+    "compressResponses": {{compression}},
+    "databases": {
+        "db": {
+            "server": "http://{{bucket}}:password@{{db_master}}/",
+            "bucket": "{{bucket}}",
+            "users": {
+                "GUEST": { "disabled": true }
+            }
         }
+    }
 }
