--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ nose==1.3.1
 numpy
 requests==2.1.0
 seriesly
+sqlalchemy==0.9.4
 git+https://github.com/couchbaselabs/spring.git#egg=spring
 git+https://github.com/pavel-paulau/tap.git#egg=tap
 git+https://github.com/pavel-paulau/upr.git#egg=upr
