--- a/templates/gateway_config_template.json
+++ b/templates/gateway_config_template.json
@@ -1,8 +1,8 @@
 {
     "log": ["HTTP"],
     "adminInterface": ":4985",
-    "maxIncomingConnections": "{{conn_in}}",
-    "maxCouchbaseConnections": "{{conn_db}}",
+    "maxIncomingConnections": {{conn_in}},
+    "maxCouchbaseConnections": {{conn_db}},
     "maxFileDescriptors": 90000,
     "slowServerCallWarningThreshold": 500,
     "compressResponses": {{compression}},
