Add doc_size as configurable parameter
Change-Id: I5139a50f58ede511c2a8fe10a5414718ef30628b
Reviewed-on: http://review.couchbase.org/37802
Reviewed-by: Li Yang <lichenyang2@gmail.com>
Tested-by: buildbot <build@couchbase.com>

--- a/templates/gateload_config_template.json
+++ b/templates/gateload_config_template.json
@@ -3,6 +3,7 @@
     "Port": 4984,
     "AdminPort": 4985,
     "Database": "db",
+    "DocSize": {{doc_size}},
     "DocSizeDistribution": [
         {
             "Prob": 20,
