Add configurable parameter for sleep_time
Change-Id: Idf0f0373343a3c8e1a7c46446a57c22bfdef2a0d
Reviewed-on: http://review.couchbase.org/37866
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Li Yang <lichenyang2@gmail.com>

--- a/templates/gateload_config_template.json
+++ b/templates/gateload_config_template.json
@@ -23,7 +23,7 @@
     ],
     "RampUpIntervalMs": 900000,
     "RunTimeMs": {{run_time}},
-    "SleepTimeMs": 10000,
+    "SleepTimeMs": {{sleep_time}},
     "NumPullers": {{pullers}},
     "NumPushers": {{pushers}},
     "ChannelActiveUsers": 40,
