Add ChannelActiveUsers and ChannelConcurrentUsers as configurable parameters.  Change the units of sleep time to seconds.
Change-Id: Ib3f721c5ce0c9d55fd0592538814de8ee180c783
Reviewed-on: http://review.couchbase.org/38133
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>
Reviewed-by: Li Yang <lichenyang2@gmail.com>
Tested-by: buildbot <build@couchbase.com>

--- a/templates/gateload_config_template.json
+++ b/templates/gateload_config_template.json
@@ -21,13 +21,13 @@
             "MaxSize": 65536
         }
     ],
-    "RampUpIntervalMs": 900000,
+    "RampUpIntervalMs": {{rampup_interval}},
     "RunTimeMs": {{run_time}},
     "SleepTimeMs": {{sleep_time}},
     "NumPullers": {{pullers}},
     "NumPushers": {{pushers}},
-    "ChannelActiveUsers": 40,
-    "ChannelConcurrentUsers": 40,
+    "ChannelActiveUsers": {{channel_active_users}},
+    "ChannelConcurrentUsers": {{channel_concurrent_users}},
     "MinUserOffTimeMs": 0,
     "MaxUserOffTimeMs": 0,
     "Verbose": false,
