Add the config parameter SendAttachment to send attachments.  When SendAttachment is true, attachements will be created with size specifed in doc_size.
Change-Id: I24433355237e92c2686e8c21fe49b791348ed4d5
Reviewed-on: http://review.couchbase.org/38369
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Li Yang <lichenyang2@gmail.com>

--- a/templates/gateload_config_template.json
+++ b/templates/gateload_config_template.json
@@ -4,6 +4,7 @@
     "AdminPort": 4985,
     "Database": "db",
     "DocSize": {{doc_size}},
+    "SendAttachment": {{send_attachment}},
     "DocSizeDistribution": [
         {
             "Prob": 20,
