Add config parameter to have verbose logging or not.   For sync_gateway, verbose logging will turn on "HTTP", "HTTP+", "CRUD"
Change-Id: I9e0cf24d5a5898a80070e3d787b87ba0da8c1b58
Reviewed-on: http://review.couchbase.org/39313
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Li Yang <lichenyang2@gmail.com>

--- a/templates/gateload_config_template.json
+++ b/templates/gateload_config_template.json
@@ -31,7 +31,7 @@
     "ChannelConcurrentUsers": {{channel_concurrent_users}},
     "MinUserOffTimeMs": 0,
     "MaxUserOffTimeMs": 0,
-    "Verbose": false,
-    "LogRequests": false,
+    "Verbose": {{logging_verbose}},
+    "LogRequests": {{logging_verbose}},
     "UserOffset": {{idx * (pullers + pushers)}}
 }
