--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ logger
 git+https://github.com/pavel-paulau/mc_bin_client.git#egg=mc_bin_client
 mock
 nose==1.3.1
+networkx==1.9
 numpy
 requests==2.1.0
 seriesly
