Use couchbaselabs fork of btrc
Update to use Couchbase's fork of btrc

Change-Id: I0897caa6aa422e78d268397f8567d2d7612bee34
Reviewed-on: http://review.couchbase.org/42113
Reviewed-by: thomas anderson <thomas.couchbase@gmail.com>
Tested-by: thomas anderson <thomas.couchbase@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/pavel-paulau/btrc.git#get=btrc
+git+https://github.com/couchbaselabs/btrc.git#get=btrc
 git+https://github.com/couchbaselabs/cbagent.git#egg=cbagent
 celery==3.0.24
 couchbase==1.2.1
