Use couchbaselabs fork of tap
Change-Id: Ibf100a5ae10091a1775d54a22c6ff16d37d9fd4a
Reviewed-on: http://review.couchbase.org/42115
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Venu Uppalapati <venumahesh@gmail.com>
Tested-by: Venu Uppalapati <venumahesh@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,5 @@ requests==2.1.0
 seriesly
 sqlalchemy==0.9.4
 git+https://github.com/couchbaselabs/spring.git#egg=spring
-git+https://github.com/pavel-paulau/tap.git#egg=tap
+git+https://github.com/couchbaselabs/tap.git#egg=tap
 git+https://github.com/couchbaselabs/python-dcp-client.git#egg=dcp-client
