--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,4 @@ seriesly
 sqlalchemy==0.9.4
 git+https://github.com/couchbaselabs/spring.git#egg=spring
 git+https://github.com/pavel-paulau/tap.git#egg=tap
-git+https://github.com/pavel-paulau/upr.git#egg=upr
+git+https://github.com/couchbaselabs/python-dcp-client.git#egg=dcp-client
