Fix sgw shadow config template to include password in the server string
Change-Id: Idc672eca1cf96eedb71d4570736dcf994125cf4d
Reviewed-on: http://review.couchbase.org/44121
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Li Yang <lichenyang2@gmail.com>

--- a/templates/gateway_config_shadow_template.json
+++ b/templates/gateway_config_shadow_template.json
@@ -1,5 +1,5 @@
 {
-    "log": ["HTTP", "HTTP+", "CRUD"],
+    "log": ["Shadow"],
     "adminInterface": ":4985",
     "maxIncomingConnections": {{conn_in}},
     "maxCouchbaseConnections": {{conn_db}},
@@ -11,8 +11,11 @@
             "server": "http://{{bucket}}:password@{{db_master}}/",
             "bucket": "{{bucket}}",
             "shadow": {
-              "server": "http://{{db_master}}/",
+              "server": "http://bucket-2:password@{{db_master}}/",
               "bucket": "bucket-2"
+            },
+            "users": {
+                "GUEST": { "disabled": true }
             }
         }
     }
