Ability to specify AuthType in perfrunner config
https://github.com/couchbase/sync_gateway/issues/666

Change-Id: I6d3bb6765d143ae119fbe1bd29884c9d7d251c93
Reviewed-on: http://review.couchbase.org/47311
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Traun Leyden <tleyden@couchbase.com>
Reviewed-by: Andrei Baranouski <andrei.baranouski@gmail.com>

--- a/templates/gateload_config_template.json
+++ b/templates/gateload_config_template.json
@@ -33,5 +33,6 @@
     "MaxUserOffTimeMs": 0,
     "Verbose": {{logging_verbose}},
     "LogRequests": {{logging_verbose}},
-    "UserOffset": {{idx * (pullers + pushers)}}
+    "UserOffset": {{idx * (pullers + pushers)}},
+    "AuthType": "{{auth_type}}"
 }
