Pass param to gateload to allow empty password
https://github.com/couchbase/sync_gateway/issues/666

Change-Id: I29e53f62fc8ee38ca298d388a2e758b94d8687d6
Reviewed-on: http://review.couchbase.org/47352
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Andrei Baranouski <andrei.baranouski@gmail.com>

--- a/templates/gateload_config_template.json
+++ b/templates/gateload_config_template.json
@@ -34,5 +34,6 @@
     "Verbose": {{logging_verbose}},
     "LogRequests": {{logging_verbose}},
     "UserOffset": {{idx * (pullers + pushers)}},
-    "AuthType": "{{auth_type}}"
+    "AuthType": "{{auth_type}}",
+    "Password": "{{password}}"
 }
