Allow empty passwords
https://github.com/couchbase/sync_gateway/issues/666

Change-Id: Ifc0400ae21b09e6efdfe44eea13729d1b22ce18b
Reviewed-on: http://review.couchbase.org/47359
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Andrei Baranouski <andrei.baranouski@gmail.com>

--- a/templates/gateway_config_template.json
+++ b/templates/gateway_config_template.json
@@ -10,6 +10,7 @@
         "db": {
             "server": "http://{{bucket}}:password@{{db_master}}/",
             "bucket": "{{bucket}}",
+	    "allow_empty_password": true,
             "users": {
                 "GUEST": { "disabled": true }
             }
