update cbagent location
Change-Id: I0ac83ca89c3b59208e143767b07127c746cc1b2c
Reviewed-on: http://review.couchbase.org/51521
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Venu Uppalapati <venumahesh@gmail.com>
Tested-by: Venu Uppalapati <venumahesh@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 git+https://github.com/couchbaselabs/btrc.git#get=btrc
-git+https://github.com/couchbaselabs/cbagent.git#egg=cbagent
+git+https://github.com/couchbase/cbagent.git#egg=cbagent
 celery==3.0.24
 couchbase==1.2.1
 decorator
