update 2i scan configs
Change-Id: I0b4823b0f31515deff48699bddfe8ad629478e10
Reviewed-on: http://review.couchbase.org/51639
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Venu Uppalapati <venumahesh@gmail.com>

--- a/scripts/config_mailindex_sessionconsistent.json
+++ b/scripts/config_mailindex_sessionconsistent.json
@@ -16,6 +16,7 @@
              "Id" : 1,
              "Inclusion" : 3,
              "Index" : "myindex"
+             "Consistency" : true
            }
        ]
 }
