add stale=flase option for 2i scans
Change-Id: Ifb772cdeb7526f60de7967d77e0262d1093eb12d
Reviewed-on: http://review.couchbase.org/51651
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Venu Uppalapati <venumahesh@gmail.com>

--- a/scripts/config_mailindex_sessionconsistent.json
+++ b/scripts/config_mailindex_sessionconsistent.json
@@ -15,7 +15,7 @@
              ],
              "Id" : 1,
              "Inclusion" : 3,
-             "Index" : "myindex"
+             "Index" : "myindex",
              "Consistency" : true
            }
        ]
