update scan config files for indices on coins, achievements
Change-Id: I3f9022cbf6c91a047ed39dbced282db0f4895379
Reviewed-on: http://review.couchbase.org/52004
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Venu Uppalapati <venumahesh@gmail.com>

--- a/scripts/config_scanthr_multiple.json
+++ b/scripts/config_scanthr_multiple.json
@@ -48,34 +48,21 @@
              "Index" : "myindex3"
            },
           {
-             "Limit" : 0,
-             "Low" : [
-                "000015"
-             ],
-             "Repeat" : 999999,
-             "Type" : "Range",
+             "Type" : "All",
+             "Limit" : 24,
+             "Repeat" : 99,
              "Bucket" : "bucket-1",
-             "High" : [
-                "000028"
-             ],
              "Id" : 1,
-             "Inclusion" : 3,
              "Index" : "myindex4"
            },
           {
-             "Limit" : 0,
-             "Low" : [
-                "000015"
-             ],
-             "Repeat" : 999999,
-             "Type" : "Range",
+             "Type" : "All",
+             "Limit" : 24,
+             "Repeat" : 99,
              "Bucket" : "bucket-1",
-             "High" : [
-                "000028"
-             ],
              "Id" : 1,
-             "Inclusion" : 3,
              "Index" : "myindex5"
-           },
+           }
+
        ]
 }
