--- a/scripts/config_scanlatency_multiple.json
+++ b/scripts/config_scanlatency_multiple.json
@@ -51,36 +51,20 @@
              "NInterval" : 100
            },
           {
+             "Type" : "All",
              "Limit" : 1,
-             "Low" : [
-                "000015"
-             ],
-             "Repeat" : 999999,
-             "Type" : "Range",
+             "Repeat" : 99,
              "Bucket" : "bucket-1",
-             "High" : [
-                "000028"
-             ],
              "Id" : 1,
-             "Inclusion" : 3,
-             "Index" : "myindex4",
-             "NInterval" : 100
+             "Index" : "myindex4"
            },
           {
+             "Type" : "All",
              "Limit" : 1,
-             "Low" : [
-                "000015"
-             ],
-             "Repeat" : 999999,
-             "Type" : "Range",
+             "Repeat" : 99,
              "Bucket" : "bucket-1",
-             "High" : [
-                "000028"
-             ],
              "Id" : 1,
-             "Inclusion" : 3,
-             "Index" : "myindex5",
-             "NInterval" : 100
+             "Index" : "myindex5"
            }
-       ]
+      ]
 }
