--- a/scripts/config_scanthr_sessionconsistent_multiple.json
+++ b/scripts/config_scanthr_sessionconsistent_multiple.json
@@ -51,36 +51,20 @@
              "Consistency" : true
            },
           {
-             "Limit" : 0,
-             "Low" : [
-                "000015"
-             ],
-             "Repeat" : 999999,
-             "Type" : "Range",
+             "Type" : "All",
+             "Limit" : 24,
+             "Repeat" : 99,
              "Bucket" : "bucket-1",
-             "High" : [
-                "000028"
-             ],
              "Id" : 1,
-             "Inclusion" : 3,
-             "Index" : "myindex4",
-             "Consistency" : true
+             "Index" : "myindex4"
            },
           {
-             "Limit" : 0,
-             "Low" : [
-                "000015"
-             ],
-             "Repeat" : 999999,
-             "Type" : "Range",
+             "Type" : "All",
+             "Limit" : 24,
+             "Repeat" : 99,
              "Bucket" : "bucket-1",
-             "High" : [
-                "000028"
-             ],
              "Id" : 1,
-             "Inclusion" : 3,
-             "Index" : "myindex5",
-             "Consistency" : true
-           },
+             "Index" : "myindex5"
+           }
        ]
 }
