--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ numpy
 requests==2.1.0
 seriesly
 sqlalchemy==0.9.4
+urllib3==1.10.4
 git+https://github.com/couchbase/spring.git#egg=spring
 git+https://github.com/couchbaselabs/tap.git#egg=tap
 git+https://github.com/couchbaselabs/python-dcp-client.git#egg=dcp-client
