--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ flake8==2.1.0
 jinja2==2.7.2
 logger
 git+https://github.com/couchbaselabs/mc_bin_client.git#egg=mc_bin_client
+funcsigs
 mock
 nose==1.3.1
 networkx==1.9
