--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ jinja2==2.7.2
 logger
 git+https://github.com/couchbaselabs/mc_bin_client.git#egg=mc_bin_client
 funcsigs
-mock
+mock==1.1.2
 nose==1.3.1
 networkx==1.9
 numpy
