--- a/perfSanity/tests/perf_sanity.conf
+++ b/perfSanity/tests/perf_sanity.conf
@@ -10,4 +10,4 @@ perf_sanity_query_lat_2M.test perf_sanity_base_test.spec {"beam_rss_max_perf_san
 perf_sanity_reb_in_0_kv_10b.test perf_sanity_base_test.spec {"perf_sanity_reb_in_0_kv_10b_perf_sanity_base_test":0.0}
 perf_sanity_reb_in_1M_dgm_kv.test perf_sanity_base_test.spec {"perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test":1.5}
 
-perf_sanity_secondary.test perf_sanity_secondary.spec {"perf_sanity_secondary_incremental_perf_sanity_secondary":1.4,"perf_sanity_secondary_initial_perf_sanity_secondary":0.53}
+#perf_sanity_secondary.test perf_sanity_secondary.spec {"perf_sanity_secondary_incremental_perf_sanity_secondary":1.4,"perf_sanity_secondary_initial_perf_sanity_secondary":0.53}
