CBQE: 3138 change scripts based on jenkisn error
Change-Id: I76e886bff96b542e2d24a53c6431bef09c5892a8
Reviewed-on: http://review.couchbase.org/56820
Reviewed-by: sandip nandi <sandip.nandi@couchbase.com>
Tested-by: sandip nandi <sandip.nandi@couchbase.com>

--- a/perfSanity/tests/new_infra.conf
+++ b/perfSanity/tests/new_infra.conf
@@ -83,11 +83,39 @@
                    }
 
               }
-            ]
+            ],
+             "REBALANCE":[
+                    {
+                "name":"rebalance_dgm",
+                "test_details":
+                  {
+                   "title":"Rebalance-in (min), 2 -> 3, 1 bucket x 1M x 2KB, DGM, 10K ops/sec",
+                   "summary":"Mixed rebalance test, 2 -> 3 nodes, 1 bucket x 1M x 2KB, 10K ops/sec",
+                   "spec":  "perf_sanity_base_test.spec",
+                   "test": "perf_sanity_reb_in_1M_dgm_kv.test",
+                   "params":{"perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test":1.5},
+                   "actual_value":["1.5"]
+                   }
+                  },
+                   {
+                "name":"rebalance_kv",
+                "test_details":
+                  {
+                   "title":"Rebalance-in (min), 2->3, 10 empty buckets",
+                   "summary":" Mixed rebalance test, 2 -> 3nodes, 10 empty buckets",
+                   "spec":  "perf_sanity_base_test.spec",
+                   "test": "perf_sanity_reb_in_0_kv_10b.test",
+                   "params":{"perf_sanity_reb_in_0_kv_10b_perf_sanity_base_test":0.0},
+                   "actual_value":["0.0"]
+                   }
+                  }
+             ],
         },
 
         "couchbase_server":"172.23.105.177",
         "couchbase_bucket":"QE-Performance-Sanity",
+        "couchbase_test_bucket":"QE-Performance-Sanity-test-detail",
+        "couchbase_query_bucket": "QE-Performance-Sanity-Query-Benchmark",
         "iteration": 2,
         "variation": ".05"
  }
