--- a/perfSanity/tests/new_infra.conf
+++ b/perfSanity/tests/new_infra.conf
@@ -43,7 +43,7 @@
                    }
 
             }],
-            "secondary":[
+            "SECONDARY":[
               {
             "name":"secondary",
             "test_details":
