--- a/perfSanity/tests/perf_sanity.conf
+++ b/perfSanity/tests/perf_sanity.conf
@@ -3,8 +3,8 @@ perf_sanity_kv_drain_1M.test perf_sanity_base_test.spec {"perf_sanity_kv_drain_1
 perf_sanity_bgfetcher_1M_dgm05.test perf_sanity_base_test.spec {"perf_sanity_bgfetcher_1M_dgm05_perf_sanity_base_test":0.0}
 perf_sanity_index_2M.test perf_sanity_base_test.spec {"perf_sanity_index_2M_initial_perf_sanity_base_test":1.5,"perf_sanity_index_2M_incremental_perf_sanity_base_test":0.2}
 
-perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
-perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":215.0}
+#perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
+#perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":215.0}
 
 perf_sanity_query_lat_2M.test perf_sanity_base_test.spec {"beam_rss_max_perf_sanity_query_lat_2M_perf_sanity_base_test":200.0,"perf_sanity_query_lat_2M_perf_sanity_base_test":17.0}
 perf_sanity_reb_in_0_kv_10b.test perf_sanity_base_test.spec {"perf_sanity_reb_in_0_kv_10b_perf_sanity_base_test":4.5}
