CBQE:3138 jenkins issue fixed
Change-Id: Ic680a873d7bf2904443b75300bc59cef50fc45d5
Reviewed-on: http://review.couchbase.org/56875
Reviewed-by: sandip nandi <sandip.nandi@couchbase.com>
Tested-by: sandip nandi <sandip.nandi@couchbase.com>

--- a/perfSanity/tests/new_infra.conf
+++ b/perfSanity/tests/new_infra.conf
@@ -1,121 +1,161 @@
- {
- "test_category":
-        {
-           "KV":[
-            {
-            "name":"KV",
-            "test_details":
-                  {
-                   "title":"PersistTo=1 latency (ms), 2 buckets x 4M x 2KB, 1.25K mutations/sec/node",
-                   "summary":"Write-heavy KV test (80/20), 4 nodes, 2 buckets x 4M x 2KB, DGM, 6K mutations/sec",
-                   "spec":  "perf_sanity_base_test.spec",
-                   "test": "perf_sanity_kv_observe_4M_dgm_2b.test",
-                   "params":{ "perf_sanity_kv_observe_4M_dgm_2b_95th_perf_sanity_base_test":9840.0 },
-                   "actual_value":"9840.0"
-                   }
 
+{
+    "test_category": {
+        "KV": [
+            {
+                "name": "KV",
+                "test_details": {
+                    "title": "PersistTo=1 latency (ms), 2 buckets x 4M x 2KB, 1.25K mutations/sec/node",
+                    "summary": "Write-heavy KV test (80/20), 4 nodes, 2 buckets x 4M x 2KB, DGM, 6K mutations/sec",
+                    "spec": "perf_sanity_base_test.spec",
+                    "test": "perf_sanity_kv_observe_4M_dgm_2b.test",
+                    "params": {
+                        "perf_sanity_kv_observe_4M_dgm_2b_95th_perf_sanity_base_test": 9840
+                    },
+                    "actual_value": "9840.0"
+                }
             },
             {
-            "name":"KV_drain",
-            "test_details":
-                  {
-                   "title":"PersistTo=1 latency (ms), 2 buckets x 4M x 2KB, 1.25K mutations/sec/node",
-                   "summary":"Write-heavy KV test (80/20), 4 nodes, 2 buckets x 4M x 2KB, DGM, 6K mutations/sec",
-                   "spec":  "perf_sanity_base_test.spec",
-                   "test": "perf_sanity_kv_drain_1M.test",
-                   "params":{"perf_sanity_kv_drain_100M_perf_sanity_base_test":3.0},
-                   "actual_value":"3.0"
-                   }
-
+                "name": "KV_drain",
+                "test_details": {
+                    "title": "PersistTo=1 latency (ms), 2 buckets x 4M x 2KB, 1.25K mutations/sec/node",
+                    "summary": "Write-heavy KV test (80/20), 4 nodes, 2 buckets x 4M x 2KB, DGM, 6K mutations/sec",
+                    "spec": "perf_sanity_base_test.spec",
+                    "test": "perf_sanity_kv_drain_1M.test",
+                    "params": {
+                        "perf_sanity_kv_drain_100M_perf_sanity_base_test": 3
+                    },
+                    "actual_value": "3.0"
+                }
             }
-            ],
-            "N1QL":[
+        ],
+        "N1QL": [
             {
-            "name":"n1ql",
-            "test_details":
-                  {
-                   "title":"N1QL Q1 1Bux2Mx1K, Key-Value Lookup, 38.4KGops, 9.6KSops, 48KQops",
-                   "summary":"Write-heavy KV test (80/20), 4 nodes, 2 buckets x 4M x 2KB, DGM, 6K mutations/sec",
-                   "spec":  "perf_sanity_n1ql_test.spec",
-                   "test": "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test",
-                   "params":{ "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test":0.56 },
-                   "actual_value":".56"
-                   }
-
-            }],
-            "SECONDARY":[
-              {
-            "name":"secondary",
-            "test_details":
-                  {
-                   "title":"1 bucket x 2M x 2KB,single 2i index, no mutations during initial build only",
-                   "summary":"Secondary Indexing test, 3 KV nodes, 1 2i node 1 bucket x 2M x 2KB",
-                   "spec":  "perf_sanity_secondary.spec",
-                   "test": "perf_sanity_secondary.test",
-                   "params":{ "perf_sanity_secondary_initial_perf_sanity_secondary":0.53 },
-                   "actual_value":".53"
-                   }
-
-              },
-              {
-            "name":"secondary_staleok",
-            "test_details":
-                  {
-                   "title":"1 bucket x 2M x 2KB,single 2i index, no mutations during initial build only",
-                   "summary":"Secondary Indexing test, 3 KV nodes, 1 2i node 1 bucket x 2M x 2KB",
-                   "spec":  "perf_sanity_index.spec",
-                   "test": "secondary_scanlatency_2M.test",
-                   "params":{"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":1.0},
-                   "actual_value":".53"
-                   }
-
-              },
-              {
-            "name":"secondary_stalefalse",
-            "test_details":
-                  {
-                   "title":"1 bucket x 2M x 2KB,single 2i index, no mutations during initial build only",
-                   "summary":"Secondary Indexing test, 3 KV nodes, 1 2i node 1 bucket x 2M x 2KB",
-                   "spec":  "perf_sanity_index.spec",
-                   "test": "perf_sanity_secondary_scanlatency_stalefalse_2M.test",
-                   "params":{"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":250.0},
-                   "actual_value":".53"
-                   }
-
-              }
-            ],
-             "REBALANCE":[
-                    {
-                "name":"rebalance_dgm",
-                "test_details":
-                  {
-                   "title":"Rebalance-in (min), 2 -> 3, 1 bucket x 1M x 2KB, DGM, 10K ops/sec",
-                   "summary":"Mixed rebalance test, 2 -> 3 nodes, 1 bucket x 1M x 2KB, 10K ops/sec",
-                   "spec":  "perf_sanity_base_test.spec",
-                   "test": "perf_sanity_reb_in_1M_dgm_kv.test",
-                   "params":{"perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test":1.5},
-                   "actual_value":["1.5"]
-                   }
-                  },
-                   {
-                "name":"rebalance_kv",
-                "test_details":
-                  {
-                   "title":"Rebalance-in (min), 2->3, 10 empty buckets",
-                   "summary":" Mixed rebalance test, 2 -> 3nodes, 10 empty buckets",
-                   "spec":  "perf_sanity_base_test.spec",
-                   "test": "perf_sanity_reb_in_0_kv_10b.test",
-                   "params":{"perf_sanity_reb_in_0_kv_10b_perf_sanity_base_test":0.0},
-                   "actual_value":["0.0"]
-                   }
-                  }
-             ]
-        },
-
-        "couchbase_server":"172.23.105.177",
-        "couchbase_bucket":"QE-Performance-Sanity",
-        "couchbase_test_bucket":"QE-Performance-Sanity-test-detail",
-        "couchbase_query_bucket": "QE-Performance-Sanity-Query-Benchmark",
-        "iteration": 2,
-        "variation": ".05"
- }
+                "name": "n1ql",
+                "test_details": {
+                    "title": "N1QL Q1 1Bux2Mx1K, Key-Value Lookup, 38.4KGops, 9.6KSops, 48KQops",
+                    "summary": "Write-heavy KV test (80/20), 4 nodes, 2 buckets x 4M x 2KB, DGM, 6K mutations/sec",
+                    "spec": "perf_sanity_n1ql_test.spec",
+                    "test": "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test",
+                    "params": {
+                        "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test": 0.56
+                    },
+                    "actual_value": ".56"
+                }
+            },
+            {
+                "name": "n1ql_throughput",
+                "test_details": {
+                    "title": "N1QL Q2 1Bux2Mx1K, Singleton Unique Lookup, 14.4KGops, 3.6KSops, GSI, stale=false",
+                    "summary": "Singleton Unique Lookup, 14.4KGops, 3.6KSops",
+                    "spec": "hades.spec",
+                    "test": "perfsanity_n1ql_thr_Q2_2M_gsi_false.test",
+                    "params": {
+                        "perfsanity_n1ql_thr_Q2_2M_gsi_false_avg_query_requests_hades": 5.4
+                    },
+                    "actual_value": [
+                        "5.4"
+                    ]
+                }
+            }
+        ],
+        "SECONDARY": [
+            {
+                "name": "secondary",
+                "test_details": {
+                    "title": "1 bucket x 2M x 2KB,single 2i index, no mutations during initial build only",
+                    "summary": "Secondary Indexing test, 3 KV nodes, 1 2i node 1 bucket x 2M x 2KB",
+                    "spec": "perf_sanity_secondary.spec",
+                    "test": "perf_sanity_secondary.test",
+                    "params": {
+                        "perf_sanity_secondary_initial_perf_sanity_secondary": 0.53
+                    },
+                    "actual_value": ".53"
+                }
+            },
+            {
+                "name": "secondary_staleok",
+                "test_details": {
+                    "title": "1 bucket x 2M x 2KB,single 2i index, no mutations during initial build only",
+                    "summary": "Secondary Indexing test, 3 KV nodes, 1 2i node 1 bucket x 2M x 2KB",
+                    "spec": "perf_sanity_index.spec",
+                    "test": "secondary_scanlatency_2M.test",
+                    "params": {
+                        "perf_sanity_secondary_scanlatency_2M_perf_sanity_index": 1
+                    },
+                    "actual_value": ".53"
+                }
+            },
+            {
+                "name": "secondary_stalefalse",
+                "test_details": {
+                    "title": "1 bucket x 2M x 2KB,single 2i index, no mutations during initial build only",
+                    "summary": "Secondary Indexing test, 3 KV nodes, 1 2i node 1 bucket x 2M x 2KB",
+                    "spec": "perf_sanity_index.spec",
+                    "test": "perf_sanity_secondary_scanlatency_stalefalse_2M.test",
+                    "params": {
+                        "perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index": 250
+                    },
+                    "actual_value": ".53"
+                }
+            }
+        ],
+        "REBALANCE": [
+            {
+                "name": "rebalance_dgm",
+                "test_details": {
+                    "title": "Rebalance-in (min), 2 -> 3, 1 bucket x 1M x 2KB, DGM, 10K ops/sec",
+                    "summary": "Mixed rebalance test, 2 -> 3 nodes, 1 bucket x 1M x 2KB, 10K ops/sec",
+                    "spec": "perf_sanity_base_test.spec",
+                    "test": "perf_sanity_reb_in_1M_dgm_kv.test",
+                    "params": {
+                        "perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test": 1.5
+                    },
+                    "actual_value": [
+                        "1.5"
+                    ]
+                }
+            },
+            {
+                "name": "rebalance_kv",
+                "test_details": {
+                    "title": "Rebalance-in (min), 2->3, 10 empty buckets",
+                    "summary": " Mixed rebalance test, 2 -> 3nodes, 10 empty buckets",
+                    "spec": "perf_sanity_base_test.spec",
+                    "test": "perf_sanity_reb_in_0_kv_10b.test",
+                    "params": {
+                        "perf_sanity_reb_in_0_kv_10b_perf_sanity_base_test": 0
+                    },
+                    "actual_value": [
+                        "0.0"
+                    ]
+                }
+            }
+        ],
+        "INDEX": [
+            {
+                "name": "index",
+                "test_details": {
+                    "title": "1 bucket x 2M x 2KB, non-DGM, 4 x 4 views, no mutations",
+                    "summary": "Indexing test, 3 nodes, 1 bucket x 2M x 2KB, non-DGM, 4 x 4 views",
+                    "spec": "perf_sanity_index.spec",
+                    "test": "perf_sanity_index_2M.test",
+                    "params": {
+                        "perf_sanity_index_2M_initial_perf_sanity_base_test": 2,
+                        "perf_sanity_index_2M_incremental_perf_sanity_base_test": 0
+                    },
+                    "actual_value": [
+                        "2.0",
+                        "0"
+                    ]
+                }
+            }
+        ]
+    },
+    "couchbase_server": "172.23.105.177",
+    "couchbase_bucket": "QE-Performance-Sanity",
+    "couchbase_test_bucket": "QE-Performance-Sanity-test-detail",
+    "couchbase_query_bucket": "QE-Performance-Sanity-Query-Benchmark",
+    "iteration": 2,
+    "variation": ".05"
+}
