--- a/perfSanity/tests/new_infra.conf
+++ b/perfSanity/tests/new_infra.conf
@@ -27,6 +27,30 @@
                     },
                     "actual_value": "3.0"
                 }
+            },
+              {	
+            "name":"KV_bgfetcher",	
+            "test_details":	
+                  {	
+                   "title":"Avg. BgFetcher wait time (ms), 1 bucket x 1M x 2KB, DGM 05pct, 2K ops/sec, 20%% cache miss rate",	
+                   "summary":"Read-heavy KV test (80/20), 3 nodes, 1 bucket x 1M x 2KB, DGM 05pct, 2K ops/sec, 20%% cache miss rate",	
+                   "spec":  "perf_sanity_base_test.spec",	
+                   "test": "perf_sanity_kv_drain_1M.test",	
+                   "params":{"perf_sanity_bgfetcher_1M_dgm05_perf_sanity_base_test":0.0},	
+                   "actual_value":["0.0"]	
+                   }	
+            },	
+            {	
+            "name":"KV_latency",	
+            "test_details":	
+                  {	
+                   "title":"latency (ms), mixed, 1 bucket x 2M x 2KB, non-DGM, 10K ops/sec",	
+                   "summary":"Mixed KV test, 4 nodes, 1 bucket x 2M x 2KB, non-DGM, 10K ops/sec",	
+                   "spec":  "perf_sanity_base_test.spec",	
+                   "test": "perf_sanity_kv_latency_mixed_2M.test",	
+                   "params":{"perf_sanity_kv_latency_mixed_2M_get_95th_perf_sanity_base_test":1.0,"perf_sanity_kv_latency_mixed_2M_set_95th_perf_sanity_base_test":1.0},	
+                   "actual_value":["0.0"]	
+                   }	
             }
         ],
         "N1QL": [
@@ -141,12 +165,12 @@
                     "spec": "perf_sanity_index.spec",
                     "test": "perf_sanity_index_2M.test",
                     "params": {
-                        "perf_sanity_index_2M_initial_perf_sanity_base_test": 2,
-                        "perf_sanity_index_2M_incremental_perf_sanity_base_test": 0
+                        "perf_sanity_index_2M_initial_perf_sanity_index": 2,
+                        "perf_sanity_index_2M_incremental_perf_sanity_index": 0.2
                     },
                     "actual_value": [
                         "2.0",
-                        "0"
+                        "0.2"
                     ]
                 }
             }
