--- a/perfSanity/tests/perf_sanity.conf
+++ b/perfSanity/tests/perf_sanity.conf
@@ -1,4 +1,4 @@
-perf_sanity_kv_latency_mixed_2M.test perf_sanity_base_test.spec {"perf_sanity_kv_latency_mixed_2M_get_95th_perf_sanity_base_test":0.65,"perf_sanity_kv_latency_mixed_2M_set_95th_perf_sanity_base_test":1.0}
+#perf_sanity_kv_latency_mixed_2M.test perf_sanity_base_test.spec {"perf_sanity_kv_latency_mixed_2M_get_95th_perf_sanity_base_test":0.65,"perf_sanity_kv_latency_mixed_2M_set_95th_perf_sanity_base_test":1.0}
 perf_sanity_kv_drain_1M.test perf_sanity_base_test.spec {"perf_sanity_kv_drain_1M_perf_sanity_base_test":13.0}
 perf_sanity_bgfetcher_1M_dgm05.test perf_sanity_base_test.spec {"perf_sanity_bgfetcher_1M_dgm05_perf_sanity_base_test":0.0}
 perf_sanity_index_2M.test perf_sanity_base_test.spec {"perf_sanity_index_2M_initial_perf_sanity_base_test":1.5,"perf_sanity_index_2M_incremental_perf_sanity_base_test":0.2}
