CBQE: 3138 new changes
Change-Id: I85bdc906c187bc8be7b16f3278f8cc8bbc232f41
Reviewed-on: http://review.couchbase.org/56957
Reviewed-by: sandip nandi <sandip.nandi@couchbase.com>
Tested-by: sandip nandi <sandip.nandi@couchbase.com>

--- a/perfSanity/tests/new_infra.conf
+++ b/perfSanity/tests/new_infra.conf
@@ -54,20 +54,7 @@
             }
         ],
         "N1QL": [
-            {
-                "name": "n1ql",
-                "test_details": {
-                    "title": "N1QL Q1 1Bux2Mx1K, Key-Value Lookup, 38.4KGops, 9.6KSops, 48KQops",
-                    "summary": "Write-heavy KV test (80/20), 4 nodes, 2 buckets x 4M x 2KB, DGM, 6K mutations/sec",
-                    "spec": "perf_sanity_n1ql_test.spec",
-                    "test": "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test",
-                    "params": {
-                        "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test": 0.56
-                    },
-                    "actual_value": ".56"
-                }
-            },
-            {
+             {
                 "name": "n1ql_throughput",
                 "test_details": {
                     "title": "N1QL Q2 1Bux2Mx1K, Singleton Unique Lookup, 14.4KGops, 3.6KSops, GSI, stale=false",
@@ -81,7 +68,21 @@
                         "5.4"
                     ]
                 }
+            },
+            {
+                "name": "n1ql",
+                "test_details": {
+                    "title": "N1QL Q1 1Bux2Mx1K, Key-Value Lookup, 38.4KGops, 9.6KSops, 48KQops",
+                    "summary": "Write-heavy KV test (80/20), 4 nodes, 2 buckets x 4M x 2KB, DGM, 6K mutations/sec",
+                    "spec": "perf_sanity_n1ql_test.spec",
+                    "test": "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test",
+                    "params": { 
+                        "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test": 1.0
+                    },
+                    "actual_value": "1.0"
+                }
             }
+
         ],
         "SECONDARY": [
             {
