--- a/perfSanity/tests/new_infra.conf
+++ b/perfSanity/tests/new_infra.conf
@@ -75,9 +75,9 @@
                     "title": "N1QL Q1 1Bux2Mx1K, Key-Value Lookup, 38.4KGops, 9.6KSops, 48KQops",
                     "summary": "Write-heavy KV test (80/20), 4 nodes, 2 buckets x 4M x 2KB, DGM, 6K mutations/sec",
                     "spec": "perf_sanity_n1ql_test.spec",
-                    "test": "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops_perf_sanity_n1ql_test",
+                    "test": "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test",
                     "params": { 
-                        "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops.test": 1.0
+                        "perf_sanity_n1ql_wl_Q1_2M_48Kops_48KQops_perf_sanity_n1ql_test": 1.0
                     },
                     "actual_value": "1.0"
                 }
