CBQE : 3138 more fixes
Change-Id: Ib90368cb8726ff0cc75016af652e398276174139
Reviewed-on: http://review.couchbase.org/57007
Reviewed-by: sandip nandi <sandip.nandi@couchbase.com>
Tested-by: sandip nandi <sandip.nandi@couchbase.com>

--- a/perfSanity/tests/new_infra.conf
+++ b/perfSanity/tests/new_infra.conf
@@ -35,7 +35,7 @@
                    "title":"Avg. BgFetcher wait time (ms), 1 bucket x 1M x 2KB, DGM 05pct, 2K ops/sec, 20%% cache miss rate",	
                    "summary":"Read-heavy KV test (80/20), 3 nodes, 1 bucket x 1M x 2KB, DGM 05pct, 2K ops/sec, 20%% cache miss rate",	
                    "spec":  "perf_sanity_base_test.spec",	
-                   "test": "perf_sanity_kv_drain_1M.test",	
+                   "test": "perf_sanity_bgfetcher_1M_dgm05.test",	
                    "params":{"perf_sanity_bgfetcher_1M_dgm05_perf_sanity_base_test":0.0},	
                    "actual_value":["0.0"]	
                    }	
