CBQE-3242 Tuning daily sanity'
Change-Id: I9fb34396d921e3fcce25e6dfe3bae7c87c02570e
Reviewed-on: http://review.couchbase.org/57790
Well-Formed: buildbot <build@couchbase.com>
Reviewed-by: Eric Cooper <ericcouchbase@gmail.com>
Tested-by: Eric Cooper <ericcouchbase@gmail.com>

--- a/perfSanity/tests/perf_sanity.conf
+++ b/perfSanity/tests/perf_sanity.conf
@@ -1,4 +1,4 @@
-#perf_sanity_kv_latency_mixed_2M.test perf_sanity_base_test.spec {"perf_sanity_kv_latency_mixed_2M_get_95th_perf_sanity_base_test":0.65,"perf_sanity_kv_latency_mixed_2M_set_95th_perf_sanity_base_test":1.0}
+perf_sanity_kv_latency_mixed_2M.test perf_sanity_base_test.spec {"perf_sanity_kv_latency_mixed_2M_get_95th_perf_sanity_base_test":0.65,"perf_sanity_kv_latency_mixed_2M_set_95th_perf_sanity_base_test":1.0}
 perf_sanity_kv_drain_1M.test perf_sanity_base_test.spec {"perf_sanity_kv_drain_1M_perf_sanity_base_test":13.0}
 perf_sanity_bgfetcher_1M_dgm05.test perf_sanity_base_test.spec {"perf_sanity_bgfetcher_1M_dgm05_perf_sanity_base_test":0.0}
 perf_sanity_index_2M.test perf_sanity_base_test.spec {"perf_sanity_index_2M_initial_perf_sanity_base_test":1.5,"perf_sanity_index_2M_incremental_perf_sanity_base_test":0.2}
@@ -6,10 +6,10 @@ perf_sanity_index_2M.test perf_sanity_base_test.spec {"perf_sanity_index_2M_init
 #perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
 #perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":215.0}
 
-#perf_sanity_query_lat_2M.test perf_sanity_base_test.spec {"beam_rss_max_perf_sanity_query_lat_2M_perf_sanity_base_test":200.0,"perf_sanity_query_lat_2M_perf_sanity_base_test":17.0}
+perf_sanity_query_lat_2M.test perf_sanity_base_test.spec {"beam_rss_max_perf_sanity_query_lat_2M_perf_sanity_base_test":200.0,"perf_sanity_query_lat_2M_perf_sanity_base_test":17.0}
 perf_sanity_reb_in_0_kv_10b.test perf_sanity_base_test.spec {"perf_sanity_reb_in_0_kv_10b_perf_sanity_base_test":4.5}
 perf_sanity_reb_in_1M_dgm_kv.test perf_sanity_base_test.spec {"perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test":1.4}
 
 kv_observe_4M_repl.test perf_sanity_base_test.spec {"kv_observe_4M_repl_95th_perf_sanity_base_test":7}
 
-#perf_sanity_secondary.test perf_sanity_secondary.spec {"perf_sanity_secondary_incremental_perf_sanity_secondary":1.4,"perf_sanity_secondary_initial_perf_sanity_secondary":0.53}
+perf_sanity_secondary.test perf_sanity_secondary.spec {"perf_sanity_secondary_incremental_perf_sanity_secondary":12,"perf_sanity_secondary_initial_perf_sanity_secondary":1.2}
