--- a/perfSanity/tests/new_infra.conf
+++ b/perfSanity/tests/new_infra.conf
@@ -3,6 +3,19 @@
     "test_category": {
         "KV": [
             {
+             "name": "KV_Observe_Repl",
+                "test_details": {
+                    "title": "ReplicateTo=1 latency (ms), 1 bucket x 4M x 1KB, 5K mutations/sec/node",
+                    "summary": "Read-heavy KV test (80/20), 3 nodes, 1 bucket x 4M x 1KB, 40K mutations/sec",
+                    "spec": "perf_sanity_base_test.spec",
+                    "test": "kv_observe_4M_repl.test",
+                    "params": {
+                       "kv_observe_4M_repl_95th_perf_sanity_base_test":7
+                    },
+                    "actual_value": "7.0"
+                }
+            },
+            {
                 "name": "KV",
                 "test_details": {
                     "title": "PersistTo=1 latency (ms), 2 buckets x 4M x 2KB, 1.25K mutations/sec/node",
@@ -62,7 +75,7 @@
                     "spec": "hades.spec",
                     "test": "perf_sanity_n1ql_thr_Q2_2M_gsi_false.test",
                     "params": {
-                        "perf_sanity_n1ql_thr_Q2_2M_gsi_false_avg_query_requests_hades": 230.0
+                        "perf_sanity_n1ql_thr_Q2_2M_gsi_false_avg_query_requests_hades": 240.0
                     },
                     "actual_value": [
                         "240.0"
@@ -181,6 +194,6 @@
     "couchbase_bucket": "QE-Performance-Sanity",
     "couchbase_test_bucket": "QE-Performance-Sanity-test-detail",
     "couchbase_query_bucket": "QE-Performance-Sanity-Query-Benchmark",
-    "iteration": 1,
-    "variation": ".05"
+    "iteration": 2,
+    "variation": ".10"
 }
