--- a/perfSanity/tests/beta_tests.conf
+++ b/perfSanity/tests/beta_tests.conf
@@ -1,2 +1,6 @@
 perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
 perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":215.0}
+perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
+perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":215.0}
+perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
+perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":215.0}
