--- a/perfSanity/tests/perf_sanity.conf
+++ b/perfSanity/tests/perf_sanity.conf
@@ -6,7 +6,7 @@ perf_sanity_index_2M.test perf_sanity_base_test.spec {"perf_sanity_index_2M_init
 #perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
 #perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":215.0}
 
-# disabled 12/31 perf_sanity_query_lat_2M.test perf_sanity_base_test.spec {"beam_rss_max_perf_sanity_query_lat_2M_perf_sanity_base_test":200.0,"perf_sanity_query_lat_2M_perf_sanity_base_test":17.0}
+perf_sanity_query_lat_2M.test perf_sanity_base_test.spec {"beam_rss_max_perf_sanity_query_lat_2M_perf_sanity_base_test":200.0,"perf_sanity_query_lat_2M_perf_sanity_base_test":20.0}
 perf_sanity_reb_in_0_kv_10b.test perf_sanity_base_test.spec {"perf_sanity_reb_in_0_kv_10b_perf_sanity_base_test":4.5}
 # disabled 12/31 perf_sanity_reb_in_1M_dgm_kv.test perf_sanity_base_test.spec {"perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test":1.4}
 
