--- a/perfSanity/tests/beta_tests.conf
+++ b/perfSanity/tests/beta_tests.conf
@@ -1,3 +1,4 @@
-#perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
+perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
 perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":215.0}
 perf_sanity_n1ql_thr_Q2_2M_gsi_false.test hades.spec {"perf_sanity_n1ql_thr_Q2_2M_gsi_false_avg_query_requests_hades":240}
+perf_sanity_kv_drain_1M.test perf_sanity_base_test.spec {"perf_sanity_kv_drain_1M_perf_sanity_base_test":13.0}
