--- a/perfSanity/tests/beta_tests.conf
+++ b/perfSanity/tests/beta_tests.conf
@@ -2,3 +2,5 @@ perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_
 perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":215.0}
 perf_sanity_n1ql_thr_Q2_2M_gsi_false.test hades.spec {"perf_sanity_n1ql_thr_Q2_2M_gsi_false_avg_query_requests_hades":240}
 perf_sanity_kv_drain_1M.test perf_sanity_base_test.spec {"perf_sanity_kv_drain_1M_perf_sanity_base_test":13.0}
+perf_sanity_reb_in_1M_dgm_kv.test perf_sanity_base_test.spec {"perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test":1.4}
+perf_sanity_index_2M.test perf_sanity_base_test.spec {"perf_sanity_index_2M_initial_perf_sanity_base_test":1.5,"perf_sanity_index_2M_incremental_perf_sanity_base_test":0.2}
